# linkedin-scraper

./: README.md  pyproject.toml
src/: json_scheme_ld.json
src/LinkedIn_Scraper/: linkedin.py
