[project]
name = "LinkedIn_Scraper"
version = "0.0.1"
authors = [
  { name="Galih Anggara", email="galihanggara68@gmail.com" },
]
description = "LinkedIn Scraper using Selenium Finder library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/galihanggara68/linkedin-scraper"
"Bug Tracker" = "https://github.com/galihanggara68/linkedin-scraper/issues"